--- a/K8s/Jenkins/statefulset/statefulset.yaml
+++ b/K8s/Jenkins/statefulset/statefulset.yaml
@@ -1,8 +1,8 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: jenkins
-  namespace: jenkins
+  name: jenkins-sfs
+  namespace: devops-tools
 spec:
   serviceName: "jenkins"
   replicas: 1
@@ -14,10 +14,10 @@ spec:
       labels:
         app: jenkins-server
     spec:
+      serviceAccountName: jenkins-admin
       securityContext:
         fsGroup: 1000 
         runAsUser: 1000
-      serviceAccountName: jenkins-admin
       containers:
         - name: jenkins
 #          image: jenkins/jenkins:lts
@@ -25,10 +25,10 @@ spec:
           resources:
             limits:
               memory: "2Gi"
-              cpu: "1000m"
+              cpu: "1500m"
             requests:
               memory: "500Mi"
-              cpu: "500m"
+              cpu: "1000m"
           ports:
             - name: httpport
               containerPort: 8080
@@ -53,7 +53,12 @@ spec:
           volumeMounts:
             - name: jenkins-data
               mountPath: /var/jenkins_home
-      volumes:
-        - name: jenkins-data
-          persistentVolumeClaim:
-              claimName: jenkins-pv-claim
+  volumeClaimTemplates:
+    - metadata:
+        name: jenkins-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        storageClassName: "local-storage"
+        resources:
+          requests:
+            storage: 10Gi
