--- a/K8s/prometheus/deploy-ingress-for-prometheus.yaml
+++ b/K8s/prometheus/deploy-ingress-for-prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: prometheus
-  namespace: darwin
+  namespace: prometheus
 spec:
   ingressClassName: nginx
   rules:
