--- a/K8s/Jenkins/statefulset/service-NodePort.yaml
+++ b/K8s/Jenkins/statefulset/service-NodePort.yaml
@@ -1,12 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jenkins-service
+  name: jenkins-nodeport
   namespace: devops-tools
-  annotations:
-      prometheus.io/scrape: 'true'
-      prometheus.io/path:   /
-      prometheus.io/port:   '8080'
 spec:
   selector: 
     app: jenkins-server
